--- a/src/app/components/user/user/user.component.html
+++ b/src/app/components/user/user/user.component.html
@@ -13,6 +13,8 @@
 
             </div>	
             <div class="profile-details">
+                    <i class="material-icons"> more_horiz</i>
+
               <div class="profile-width">
                 <div>
                     <img [src]="profileSmImage" class="dashboard-avatar-thumb" *ngIf="!isImageLoading" alt="User avatar">
