--- a/src/app/components/user/usertemplate/userofficetemplate/useroffice/useroffice.component.html
+++ b/src/app/components/user/usertemplate/userofficetemplate/useroffice/useroffice.component.html
@@ -33,11 +33,13 @@
         <i class="fa fa-pencil-square-o"></i>
     </a>
       <span class="subtle date-time"  *ngFor="let displayProperty of displayProperties">
-        <span *ngIf="displayProperty.propId == 'fax' && office[displayProperty.propId]"><i class="fa fa-fax"></i></span>
-        <span *ngIf="displayProperty.propId == 'phone' && office[displayProperty.propId]"><i class="fa fa-phone"></i></span>
-        <span *ngIf="displayProperty.propId == 'address' && office[displayProperty.propId]"><i class="fa fa-address-card"></i></span>
-        <span *ngIf="displayProperty.propId == 'email' && office[displayProperty.propId]"><i class="fa fa-envelope"></i></span>
-            {{office[displayProperty.propId]}}
+        <div *ngIf="displayProperty.propId !== 'type'">
+          <span *ngIf="displayProperty.propId == 'fax' && office[displayProperty.propId]"><i class="fa fa-fax"></i></span>
+          <span *ngIf="displayProperty.propId == 'phone' && office[displayProperty.propId]"><i class="fa fa-phone"></i></span>
+          <span *ngIf="displayProperty.propId == 'address' && office[displayProperty.propId]"><i class="fa fa-address-card"></i></span>
+          <span *ngIf="displayProperty.propId == 'email' && office[displayProperty.propId]"><i class="fa fa-envelope"></i></span>
+              {{office[displayProperty.propId]}}
+        </div>    
       </span>
       <div class="card-media-body-supporting-bottom">
       </div>
