--- a/src/app/components/user/user/user.component.html
+++ b/src/app/components/user/user/user.component.html
@@ -127,16 +127,14 @@
                             <li *ngIf="!isSelfProfile && !isInCircle" class="badge badge-pill badge-dark pointer" (click)="add2Circle()">Add to Circle<i class="fa fa-star-o"></i></li>
                             <li *ngIf="!isSelfProfile && isInCircle" class="badge badge-pill badge-warning pointer" (click)="removeFromCircle()">In Circle<i class="fa fa-star-o"></i></li>           
                             <li *ngIf="!isSelfProfile && managedBy && managedBy.length > -1" class="vseparator"></li>
-                            <li *ngIf="!isSelfProfile && managedBy && managedBy.length > -1" class="badge badge-pill badge-success pointer" (click)="managedByUsers()">Members &nbsp;<span class="badge badge-light">{{managedBy.length}}</span></li>                                     
-                            <li class="edit-profile-li">
-                                <!-- <span class="circle-button">
-                                <i class="material-icons"> more_horiz</i>
-                            </span> -->
-                            <button mat-icon-button class="circle-button" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-                                <mat-icon>more_horiz</mat-icon>
-                                <!-- <i class="material-icons"> more_horiz</i> -->
+                            <li *ngIf="!isSelfProfile && managedBy && managedBy.length > -1" class="badge badge-pill badge-success pointer" (click)="managedByUsers()">Members &nbsp;<span class="badge badge-light">{{managedBy.length}}</span>                                    
+                            <li  class="badge badge-pill badge-success pointer" >
+                                <span mat-icon-button class="circle-button" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                                    <mat-icon class="edit-profile-icon">more_horiz</mat-icon>
+                                    <!-- <i class="material-icons"> more_horiz</i> -->
+    
+                                </span>                            <!-- </li>                                      -->
 
-                              </button>
                               <mat-menu #menu="matMenu">
                                 <button mat-menu-item>
                                   <span>Edit Profile</span>
@@ -180,13 +178,18 @@
 
               </div>
             </div>
-            <div class="dashboard-avatar-text col-md-6 col-md-offset-3">
-                <div class="bio-intro box">
-                    <a class="edit-bio-intro edit" href="#"><i class="ti ti-pencil"></i></a>
-                    <a class="edit-bio-intro save" href="#"><i class="ti ti-save-alt"></i></a>
+            <div class="dashboard-avatar-text col-md-6 col-md-offset-3" (mouseenter)="isEditDescIcon=true" (mouseleave)="isEditDescIcon=false">
+                <div class="bio-intro box" *ngIf="!isEditDesc">
+                    <span class="edit-bio-intro edit" *ngIf="isEditDescIcon" (click)="isEditDesc=true"><mat-icon>edit</mat-icon></span>
                     <p class="expclpse" [class.show]="showLessDescription">{{userData.description}}</p>
                     <span *ngIf="showDescriptionSlider" (click)="showLessDescription = !showLessDescription" class="showMore">{{ showLessDescription ? 'Show less': '... Show more' }}</span>
                 </div>
+
+                <div class="bio-intro box" *ngIf="isEditDesc">
+                    <span class="edit-bio-intro edit" (click)="isEditDesc=false"><mat-icon>done_outline</mat-icon></span>
+                    <textarea class="form-control form-control-lg mb-3" rows="3" placeholder="Large textarea">{{userData.description}}</textarea>
+                </div>
+                
             </div>
           </div>
         </div>
