--- a/src/app/components/circle/circle.component.html
+++ b/src/app/components/circle/circle.component.html
@@ -1,4 +1,4 @@
-<p>
+<p class="top-alignment">
   <ngb-alert type="primary" [dismissible]="false">
     You can setup your own Circle, so the favorite profiles can be quickly accessed from here.
     <h6>Just select 'Add to Circle' from any profile.</h6>
