--- a/src/app/components/user/user/user.component.html
+++ b/src/app/components/user/user/user.component.html
@@ -7,7 +7,7 @@
                 <a href="#" class="btn btn-light manage-btn"><i class="fa fa-camera"></i> Edit Cover Photo </a>
                 <input type="file" class="file-input" (change)="onProfileSmImageSelected($event)">
 -->             
-                <label for="actual-btn btn" class="btn btn-light manage-btn">Edit Cover Photo<i class="fa fa-camera"></i>
+                <label for="actual-btn btn" *ngIf="isProfileInEditMode()" class="btn btn-light manage-btn">Edit Cover Photo<i class="fa fa-camera"></i>
                     <input type="file" class="file-input" id="actual-btn btn"/>
                 </label>
 
@@ -18,7 +18,7 @@
                 <div>
                     <img [src]="profileSmImage" class="dashboard-avatar-thumb" *ngIf="!isImageLoading" alt="User avatar">
 
-                    <label for="profilePic" class="edit-icon pointer"><i class="fa fa-camera"></i>
+                    <label for="profilePic" *ngIf="isProfileInEditMode()" class="edit-icon pointer"><i class="fa fa-camera"></i>
                         <input type="file" class="file-input" id="profilePic" (change)="onProfileSmImageSelected($event)"/>
                     </label>
 
@@ -139,15 +139,13 @@
                                 <button mat-menu-item>
                                   <span>Edit Profile</span>
                                 </button>
-                                <button mat-menu-item>
-                                  <!-- <mat-icon>voicemail</mat-icon> -->
-                                  <span>Edit Profile photo</span>
+                                <button *ngIf="isProfileInEditMode()" (click)="saveProfile()" mat-menu-item>
+                                    <span>Save Profile</span>
                                 </button>
-                                <button mat-menu-item>
-                                  <!-- <mat-icon>notifications_off</mat-icon> -->
-                                  <span>Disable alerts</span>
+                                <button *ngIf="isProfileInEditMode()" (click)="cancelEditProfile()" mat-menu-item>
+                                    <span>Cancel Editing</span>
                                 </button>
-                              </mat-menu>
+                            </mat-menu>
                         </li>
                         </ul>
                     </div>
@@ -160,7 +158,7 @@
                 </div>
 
                 <!--*ngIf="isProfileInEditMode()" -->
-                <div ngbDropdown class="d-inline-block nav-item add-drop">
+                <div *ngIf="isProfileInEditMode()" ngbDropdown class="d-inline-block nav-item add-drop">
                   <button class="btn btn-outline-primary btn-xs"
                           id="dropdownAddSection"
                           ngbDropdownToggle>
@@ -211,7 +209,7 @@
                                         <a href="#" onclick="return false;">
                                         <i class="{{profileTemplate.profileIcon}}"></i> <span class="link-text">{{profileTemplate.name}}</span></a>
                                     </li>
-                                    <li *ngIf="managedBy" (click)="managedByUsers()"  class="list-group-item pointer" [ngClass]="{ 'active': managedByActive, 'in-active': !managedByActive}"><a href="#" onclick="return false;"><i class="ti ti-user"></i> <span class="link-text">Managed by</span></a></li>
+                                    <li *ngIf="managedBy" (click)="managedByUsers()"  class="list-group-item pointer" [ngClass]="{ 'active': managedByActive, 'in-active': !managedByActive}"><a href="#" onclick="return false;"><i class="ti ti-user"></i> <span class="link-text">Members</span></a></li>
                                     <li *ngIf="isShowSettings" (click)="showSettings()" class="list-group-item pointer"
                                       [ngClass]="{ 'active': settings, 'in-active': !settings}"><a href="#" onclick="return false;"><i class="fa fa-cog"></i> <span class="link-text">Settings </span></a>
                                     </li>
