--- a/src/app/components/gps-global-search/gps-global-search.component.html
+++ b/src/app/components/gps-global-search/gps-global-search.component.html
@@ -8,7 +8,7 @@
     [itemTemplate]="itemTemplate"
     [notFoundTemplate]="notFoundTemplate">
   </ng-autocomplete>
-  <button *ngIf="from=='user' && (category=='userType' || category=='district' || category=='state' || category=='party')" class="save-button" type="button" (click)="editProfile($event)"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
+  <!-- <button *ngIf="from=='user' && (category=='userType' || category=='district' || category=='state' || category=='party')" class="save-button" type="button" (click)="editProfile($event)"><i class="fa fa-floppy-o" aria-hidden="true"></i></button> -->
 
   <!-- <button class="add-managed-button" type="button" (click)="addMember(searchUserManagedBy.username)"><i class="fa fa-plus-square" aria-hidden="true"></i></button> -->
 
