--- a/src/app/components/user/user/user.component.html
+++ b/src/app/components/user/user/user.component.html
@@ -12,7 +12,7 @@
                 </label>
 
             </div>	
-            <div class="profile-details">
+            <div class="profile-details" [ngClass]="{'profile-non-edit': !isProfileInEditMode()}">
 
               <div class="profile-width">
                 <div>
@@ -53,15 +53,14 @@
 
                                 <span  *ngIf="!isEditChamber" class="profile-pills margin-pills">
                                     <a class="padding-pills" [routerLink]="['/user', userData.role.type]">{{userData.role.type}}</a>
-        
+                                    <span class="mat-edit-icon" *ngIf="isProfileInEditMode()" (click)="toggleEditChamber()"><mat-icon>edit</mat-icon></span>
                                 </span>
-
-                                <app-gps-global-search *ngIf="isEditChamber && getPropertyDataType('type') === 'entity'" placeholder="Chamber" from="user" category="type" (valueSave)='saveChamber($event)' [inputvalue]="editChamberInput"></app-gps-global-search>
+                                <app-gps-global-search *ngIf="isEditChamber" placeholder="Chamber" from="user" category="type" (valueSelect)='saveChamber($event)' [inputvalue]="editChamberInput"></app-gps-global-search>
 
                         
                                 <div *ngIf="isEditChamber && getPropertyDataType('type') === 'text'">
                                     <input [(ngModel)]="userData.role.type" type="text" />
-                                    <button class="save-button-input" type="button" (click)="toggleEditChamber()"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
+                                    <!-- <button class="save-button-input" type="button"><i class="fa fa-floppy-o" aria-hidden="true"></i></button> -->
                                 </div>
                             </li>
                             <!-- Role-end -->
@@ -72,9 +71,10 @@
                             <li *ngIf="userData.role && userData.role.district">
                                 <span *ngIf="!isEditDistrict" class="profile-pills margin-pills">
                                     <a class="padding-pills" [routerLink]="['/user', userData.role.district]">{{userData.role.district}}</a>
-                                    
+                                    <span class="mat-edit-icon"  *ngIf="isProfileInEditMode()" (click)="toggleEditDistrict()"><mat-icon>edit</mat-icon></span>
                                 </span>
-                                <app-gps-global-search *ngIf="isEditDistrict && getPropertyDataType('district') === 'entity'" placeholder="District"  from="user" category="district" (valueSave)='saveDistrict($event)' [inputvalue]="editDistrictInput"></app-gps-global-search>
+
+                                <app-gps-global-search *ngIf="isEditDistrict && getPropertyDataType('district') === 'entity'" placeholder="District"  from="user" category="district" (valueSelect)='saveDistrict($event)' [inputvalue]="editDistrictInput"></app-gps-global-search>
                                 
                                 <div *ngIf="isEditDistrict && getPropertyDataType('district') === 'text'">
                                     <input [(ngModel)]="userData.role.district" type="text" />
@@ -87,17 +87,18 @@
 
                             <!-- STATE-begin -->
                             <li *ngIf="userData.role && userData.role.state">  
-                            <div  *ngIf="!isEditState" class="profile-pills margin-pills">
+                            <span  *ngIf="!isEditState" class="profile-pills margin-pills">
                                 <a class="padding-pills" [routerLink]="['/user', userData.role.state]">{{userData.role.state | uppercase}}</a>
-                                
-                            </div>
+                                <span class="mat-edit-icon"  *ngIf="isProfileInEditMode()" (click)="toggleEditState()"><mat-icon>edit</mat-icon></span>
 
-                                <app-gps-global-search *ngIf="isEditState && getPropertyDataType('state') === 'entity'" placeholder="State"  from="user" category="state" (valueSave)='saveState($event)' [inputvalue]="editStateInput"></app-gps-global-search>
+                            </span>
+
+                                <app-gps-global-search *ngIf="isEditState && getPropertyDataType('state') === 'entity'" placeholder="State"  from="user" category="state" (valueSelect)='saveState($event)' [inputvalue]="editStateInput"></app-gps-global-search>
 
                             
                                 <div *ngIf="isEditState && getPropertyDataType('state') === 'text'">
                                     <input [(ngModel)]="userData.role.state" type="text" />
-                                    <button class="save-button-input" type="button" (click)="toggleEditState()"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
+                                    <button class="save-button-input" type="button"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
                                 </div>
                             </li>    
                             <!-- STATE-end -->
@@ -106,13 +107,14 @@
                             <li *ngIf="userData.role && userData.role.party">  
                                 <span *ngIf="!isEditParty" class="profile-pills margin-pills">
                                     <a class="padding-pills" [routerLink]="['/user', userData.role.party]">{{userData.role.party}}</a>
-                                
+                                    <span class="mat-edit-icon" *ngIf="isProfileInEditMode()" (click)="toggleEditParty()"><mat-icon>edit</mat-icon></span>
+
                                 </span>
-                                <app-gps-global-search *ngIf="isEditParty && getPropertyDataType('party') === 'entity'" placeholder="Party"  from="user" category="party" (valueSave)='saveParty($event)' [inputvalue]="editPartyInput"></app-gps-global-search>
+                                <app-gps-global-search *ngIf="isEditParty && getPropertyDataType('party') === 'entity'" placeholder="Party"  from="user" category="party" (valueSelect)='saveParty($event)' [inputvalue]="editPartyInput"></app-gps-global-search>
                             
                                 <div *ngIf="isEditParty == true && getPropertyDataType('party') === 'text'">
                                     <input [(ngModel)]="userData.role.party" type="text" />
-                                    <button class="save-button-input" type="button" (click)="toggleEditParty()"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
+                                    <button class="save-button-input" type="button"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
                                 </div>
                             </li>  
                             <!-- PARTY-end -->
@@ -174,7 +176,7 @@
 
               </div>
             </div>
-            <div class="dashboard-avatar-text col-md-6">
+            <div class="dashboard-avatar-text col-md-12">
                 <div class="bio-intro box" *ngIf="!isEditDesc">
                     <span  *ngIf="isProfileInEditMode()" class="edit-bio-intro edit" (click)="isEditDesc=true"><mat-icon>edit</mat-icon></span>
                     <p class="expclpse" [class.show]="showLessDescription">{{userData.description}}</p>
