--- a/src/styles.css
+++ b/src/styles.css
@@ -67,8 +67,8 @@ html, body {
     display: none;
 }
 .party-search{
-    width: 50% !important;
-    margin-left: 23%;
+    width: auto !important;
+    /* margin-left: 23%; */
     display: flex;
 }
 .save-button{
@@ -422,9 +422,9 @@ input{
     color: #018ece;
 }
 
-.autocomplete-container .suggestions-container {
+/* .autocomplete-container .suggestions-container {
     position: fixed !important;
-}
+} */
 .all-posts .cdk-virtual-scroll-content-wrapper{
     display: inline-block !important;
     width: 500px !important;
